# jenkins-cute-view

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  index.html  params.json
res/: weather-icons.qrc
res/weather-icons/theme1/: licence.txt
setup/win32/: jenkins-cute-view.nsi
src/: JenkinsCuteView.pro  application.cpp  application.h  jenkinsnamespace.h  main.cpp  preferences.cpp  preferences.h  svninfos.cmake.h
src/controllers/: jenkinscontroller.cpp  jenkinscontroller.h
src/models/: buildmodel.cpp  buildmodel.h  jenkinsapimodel.cpp  jenkinsapimodel.h  jenkinsxmlapimodel.cpp  jenkinsxmlapimodel.h  jobmodel.cpp  jobmodel.h  nodemodel.cpp  nodemodel.h  nodeslistmodel.cpp  nodeslistmodel.h  queuemodel.cpp  queuemodel.h  viewmodel.cpp  viewmodel.h
src/utils/: httpgetter.cpp  httpgetter.h
src/views/: aboutdialog.cpp  aboutdialog.h  autoresizingtextitem.cpp  autoresizingtextitem.h  jenkinsgraphicsview.cpp  jenkinsgraphicsview.h  jobdisplaydata.cpp  jobdisplaydata.h  jobgraphicsitem.cpp  jobgraphicsitem.h  mainwindow.cpp  mainwindow.h  messagegraphicsitem.cpp  nodegraphicsitem.cpp  nodegraphicsitem.h  preferencesdialog.cpp  preferencesdialog.h  weathergraphicsitem.cpp
src/views/graphicsitems/: autoresizingtextitem.cpp  autoresizingtextitem.h  jobgraphicsitem.cpp  jobgraphicsitem.h  messagegraphicsitem.cpp  messagegraphicsitem.h  nodegraphicsitem.cpp  nodegraphicsitem.h  weathergraphicsitem.cpp  weathergraphicsitem.h
src/views/uis/: aboutdialog.ui  mainwindow.ui  preferencesdialog.ui
